--- a/src/scss/partials/_clients.scss
+++ b/src/scss/partials/_clients.scss
@@ -65,16 +65,13 @@
 }
 @media (min-width: $screenWidth) {
     .clients {
-        &__container {
-            width: 100vw;
-        }
         &__title {
             font-size: 1rem;
             line-height: 1.5rem;
             margin-bottom: 3vh;
         }
         &__card {
-            width: 25vw;
+            width: 25%;
             height: 12vh;
         }
         &__img {
