--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,12 +12,12 @@ $screenWidth: 800px;
 @mixin descriptionAfter ($border-color) {
     content: "";
     display: inline-block;
-    height: 0.4rem;    
-    width: 0.4rem;
+    height: 0.5rem;    
+    width: 0.5rem;
     border-right: 2px solid;
     border-bottom: 2px solid;
     border-color: $border-color;
-    transform: rotate(-45deg) translate(5px, 2px);
+    transform: rotate(-45deg) translate(50%, -15%);
 }
 
 * {
